[package]
name = "mcpvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1"
bitflags = "2.2.1"
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
image = "0.25"

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
